FIX: right side navbar icons not aligned

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,9 @@ header{
 .navbar-category>a, .account-management>a{
   padding-right: 10px;
 }
-
+.account-management{
+  text-align: right;
+}
 /* LOGO - NAVBAR*/
 .boolean-logo{
   flex-shrink: 0;
